--- a/RxAuto/Web/RxAuto.Web/Views/Shared/_Layout.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RxAuto</title>
     <link rel="stylesheet" href="~/lib/reset-css/reset.min.css" />
+
+    <!-- Used for bootstrap-select dropdown -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-select.min.css" />
+
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -42,8 +46,16 @@
             &copy; 2020 - RxAuto.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+    @*<script src="~/lib/jquery-slim/dist/jquery.slim.min.js"></script>
+    <script src="~/lib/popper/dist/umd/popper.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>*@
+
+    <!-- Used for bootstrap-select dropdown -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap-select.min.js"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
