ViewModels readjustment, Add Create Employee View, Implement services, controller and actions for it

--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Create.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model RxAuto.Web.ViewModels.JobPositions.InputModels.UnifiedModel
+﻿@model RxAuto.Web.ViewModels.UnifiedModels.JobPositionQualificationUnifiedModel
 
 @{
     ViewData["Title"] = "Job Position and Qualification Create Forms";
