--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/_QualificationForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/_QualificationForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model RxAuto.Web.ViewModels.JobPositions.InputModels.QualificationInputModel
+﻿@model RxAuto.Web.ViewModels.Qualifications.InputModels.QualificationInputModel
 
 <form method="post" asp-controller="JobPositions" asp-action="CreateQualification">
     <fieldset class="border p-3">
