--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Employees/Create.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Employees/Create.cshtml
@@ -23,9 +23,9 @@
                     <p class="form-group">
                         <label asp-for="OperatingLocationId"></label>
                         <select asp-for="OperatingLocationId" class="selectpicker show-tick" data-show-subtext="true" data-live-search="true" data-size="5">
-                            @foreach (var item in Model.OperatingLocations)
+                            @foreach (var operatingLocation in Model.OperatingLocations)
                             {
-                                <option value="@item.Id" data-subtext="@item.Address">@item.Town</option>
+                                <option value="@operatingLocation.Id" data-subtext="@operatingLocation.Address">@operatingLocation.Town</option>
                             }
                         </select>
                         <button class="btn btn-info">Add new Location</button>
