--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RxAuto.Web
 @using RxAuto.Web.Models
+@using RxAuto.Web.ViewModels.VehicleTypes.InputModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RxAuto.Web
