Implement Employee Edit, Details and Delete functionality

--- a/RxAuto/Web/RxAuto.Web/Views/Shared/_AdministrationLayout.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Shared/_AdministrationLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RxAuto</title>
-    <link rel="stylesheet" href="~/lib/reset-css/reset.min.css" />
+    <!--link rel="stylesheet" href="~/lib/reset-css/reset.min.css" /> -->
 
     <!-- Used for bootstrap-select dropdown -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
