--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Qualifications/Delete.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Qualifications/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this qualification?</h3>
+<h3>Are you sure you want to delete this qualification? Bear in mind that this qualification will be deleted from every Job Position as well.</h3>
 <div>
     <hr />
     <dl class="row">
