--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/OperatingLocations/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/OperatingLocations/Edit.cshtml
@@ -1,14 +1,14 @@
 ﻿@model RxAuto.Web.ViewModels.OperatingLocations.InputModels.OperatingLocationInputModel
 
 @{
-    ViewData["Title"] = "Operating Locations Create Form";
+    ViewData["Title"] = "Operating Locations Edit Form";
 }
 
 <div class="text-center">
     <h1 class="display-4">Operating Location Form</h1>
 </div>
 
-<form method="post" asp-controller="OperatingLocations" asp-action="Create">
+<form method="post" asp-controller="OperatingLocations" asp-action="Edit">
     <div class="container">
         <div class="row">
             <div class="col-6">
@@ -55,7 +55,8 @@
             </div>
             <row class="mx-auto mt-3">
                 <div class="col-12">
-                    <button type="submit" class="btn btn-success btn-lg">Submit</button>
+                    <button type="submit" class="btn btn-success">Save</button>
+                    <a class="btn btn-info" asp-controller="OperatingLocations" asp-action="All">Back to List</a>
                 </div>
             </row>
         </div>
