--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Departments/_PhoneForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Departments/_PhoneForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RxAuto.Web.ViewModels.Phones.InputModels.PhoneInputModel
 
-<form method="post" asp-controller="Departments" asp-action="CreatePhone">
+<form method="post" asp-area="Administration" asp-controller="Departments" asp-action="CreatePhone">
     <fieldset class="border p-3">
         <legend class="w-auto">Add Phone Number</legend>
         <p class="form-group">
