--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/All.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/All.cshtml
@@ -3,7 +3,10 @@
     ViewData["Title"] = "All";
 }
 
-<h1>Qualifications</h1>
+<h1>JobPositions</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-lg btn-success" asp-area="Administration" asp-controller="JobPositions" asp-action="Create">Create new</a>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
@@ -18,9 +21,9 @@
             <tr>
                 <td>@jobPosition.Name</td>
                 <td style="width: 20%">
-                    <a class="btn btn-sm btn-success" asp-controller="JobPositions" asp-action="Edit" asp-route-id="@jobPosition.Id">Edit</a>
-                    <a class="btn btn-sm btn-info" asp-controller="JobPositions" asp-action="Details" asp-route-id="@jobPosition.Id">Details</a>
-                    <a class="btn btn-sm btn-danger" asp-controller="JobPositions" asp-action="Delete" asp-route-id="@jobPosition.Id">Delete</a>
+                    <a class="btn btn-sm btn-success" asp-area="Administration" asp-controller="JobPositions" asp-action="Edit" asp-route-id="@jobPosition.Id">Edit</a>
+                    <a class="btn btn-sm btn-info" asp-area="Administration" asp-controller="JobPositions" asp-action="Details" asp-route-id="@jobPosition.Id">Details</a>
+                    <a class="btn btn-sm btn-danger" asp-area="Administration" asp-controller="JobPositions" asp-action="Delete" asp-route-id="@jobPosition.Id">Delete</a>
                 </td>
             </tr>
         }
