--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/_QualificationForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/_QualificationForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RxAuto.Web.ViewModels.Qualifications.InputModels.QualificationInputModel
 
-<form method="post" asp-controller="JobPositions" asp-action="CreateQualification">
+<form method="post" asp-area="Administration" asp-controller="JobPositions" asp-action="CreateQualification">
     <fieldset class="border p-3">
         <legend class="w-auto">Add Qualification</legend>
         <p class="form-group">
