--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/All.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/All.cshtml
@@ -4,6 +4,9 @@
 }
 
 <h1>Services</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-lg btn-success" asp-area="Administration" asp-controller="Services" asp-action="Create">Create new</a>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
@@ -26,9 +29,9 @@
             <td>@service.VehicleType</td>
             <td>@service.Price</td>
             <td style="width: 20%">
-                <a class="btn btn-sm btn-success" asp-controller="Services" asp-action="Edit" asp-route-id="@service.Id">Edit</a>
-                <a class="btn btn-sm btn-info" asp-controller="Services" asp-action="Details" asp-route-id="@service.Id">Details</a>
-                <a class="btn btn-sm btn-danger" asp-controller="Services" asp-action="Delete" asp-route-id="@service.Id">Delete</a>
+                <a class="btn btn-sm btn-success" asp-area="Administration" asp-controller="Services" asp-action="Edit" asp-route-id="@service.Id">Edit</a>
+                <a class="btn btn-sm btn-info" asp-area="Administration" asp-controller="Services" asp-action="Details" asp-route-id="@service.Id">Details</a>
+                <a class="btn btn-sm btn-danger" asp-area="Administration" asp-controller="Services" asp-action="Delete" asp-route-id="@service.Id">Delete</a>
             </td>
         </tr>
         }
