--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_DocumentForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_DocumentForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RxAuto.Web.ViewModels.Documents.InputModels.DocumentInputModel
 
-<form method="post" asp-controller="Services" asp-action="CreateDocument">
+<form method="post" asp-area="Administration" asp-controller="Services" asp-action="CreateDocument">
     <fieldset class="border p-3">
         <legend class="w-auto">Add New Document</legend>
         <p class="form-group">
