--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_ServiceTypeForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_ServiceTypeForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RxAuto.Web.ViewModels.ServiceTypes.InputModels.ServiceTypeInputModel
 
-<form method="post" asp-controller="Services" asp-action="CreateServiceType">
+<form method="post" asp-area="Administration" asp-controller="Services" asp-action="CreateServiceType">
     <fieldset class="border p-3">
         <legend class="w-auto">Add New Service Type</legend>
         <p class="form-group">
