--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_VehicleTypeForm.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/_VehicleTypeForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RxAuto.Web.ViewModels.VehicleTypes.InputModels.VehicleTypeInputModel
 
-<form method="post" asp-controller="Services" asp-action="CreateVehicleType">
+<form method="post" asp-area="Administration" asp-controller="Services" asp-action="CreateVehicleType">
     <fieldset class="border p-3">
         <legend class="w-auto">Add New Vehicle Type</legend>
         <p>
