--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/VehicleTypes/Details.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/VehicleTypes/Details.cshtml
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-info" asp-controller="VehicleTypes" asp-action="All">Back to List</a>
-    <a class="btn btn-success" asp-controller="VehicleTypes" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-info" asp-area="Administration" asp-controller="VehicleTypes" asp-action="All">Back to List</a>
+    <a class="btn btn-success" asp-area="Administration" asp-controller="VehicleTypes" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
 </div>
