--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Departments/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Departments/Edit.cshtml
@@ -40,7 +40,7 @@
             <row class="mx-auto mt-3">
                 <div class="col-12">
                     <button type="submit" class="btn btn-success">Save</button>
-                    <a class="btn btn-info" asp-controller="Departments" asp-action="All">Back to List</a>
+                    <a class="btn btn-info" asp-area="Administration" asp-controller="Departments" asp-action="All">Back to List</a>
                 </div>
             </row>
         </div>
