--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Documents/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Documents/Edit.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Document Form</h1>
 </div>
 
-<form method="post" asp-controller="Documents" asp-action="Edit">
+<form method="post" asp-area="Administration" asp-controller="Documents" asp-action="Edit">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -25,7 +25,7 @@
                         <span asp-validation-for="DocumentDescription" class="text-danger"></span>
                     </p>
                     <button type="submit" class="btn btn-success">Save</button>
-                    <a class="btn btn-info" asp-controller="Documents" asp-action="All">Back to List</a>
+                    <a class="btn btn-info" asp-area="Administration" asp-controller="Documents" asp-action="All">Back to List</a>
                 </fieldset>
             </div>
         </div>
