--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Employees/All.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Employees/All.cshtml
@@ -4,6 +4,9 @@
 }
 
 <h1>Employees</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-lg btn-success" asp-area="Administration" asp-controller="Employees" asp-action="Create">Create new</a>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
@@ -26,9 +29,9 @@
                 <td style="white-space:pre-wrap; word-wrap:break-word">@employee.OperatingLocation</td>
                 <td>@employee.JobPosition</td>
                 <td style="width: 20%">
-                    <a class="btn btn-sm btn-success" asp-controller="Employees" asp-action="Edit" asp-route-id="@employee.Id">Edit</a>
-                    <a class="btn btn-sm btn-info" asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">Details</a>
-                    <a class="btn btn-sm btn-danger" asp-controller="Employees" asp-action="Delete" asp-route-id="@employee.Id">Delete</a>
+                    <a class="btn btn-sm btn-success" asp-area="Administration" asp-controller="Employees" asp-action="Edit" asp-route-id="@employee.Id">Edit</a>
+                    <a class="btn btn-sm btn-info" asp-area="Administration" asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">Details</a>
+                    <a class="btn btn-sm btn-danger" asp-area="Administration" asp-controller="Employees" asp-action="Delete" asp-route-id="@employee.Id">Delete</a>
                 </td>
             </tr>
         }
