--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Delete.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Delete.cshtml
@@ -18,8 +18,8 @@
         </dd>
     </dl>
 
-    <form method="post" asp-controller="JobPositions" asp-action="Delete">
+    <form method="post" asp-area="Administration" asp-controller="JobPositions" asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a class="btn btn-info" asp-action="All">Back to List</a>
+        <a class="btn btn-info" asp-area="Administration" asp-controller="JobPositions" asp-action="All">Back to List</a>
     </form>
 </div>
