--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/JobPositions/Edit.cshtml
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <form method="post" asp-controller="JobPositions" asp-action="Edit">
+            <form method="post" asp-area="Administration" asp-controller="JobPositions" asp-action="Edit">
                 <fieldset class="border p-3">
                     <legend class="w-auto">Edit Employee</legend>
                     <div class="form-row">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success">Save</button>
-                    <a class="btn btn-info" asp-controller="JobPositions" asp-action="All">Back to List</a>
+                    <a class="btn btn-info" asp-area="Administration" asp-controller="JobPositions" asp-action="All">Back to List</a>
                 </fieldset>
             </form>
         </div>
