--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Qualifications/All.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Qualifications/All.cshtml
@@ -4,6 +4,9 @@
 }
 
 <h1>Qualifications</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-lg btn-success" asp-area="Administration" asp-controller="JobPositions" asp-action="Create">Create new</a>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
@@ -20,9 +23,9 @@
                 <td>@qualification.Name</td>
                 <td>@qualification.Description</td>
                 <td style="width: 20%">
-                    <a class="btn btn-sm btn-success" asp-controller="Qualifications" asp-action="Edit" asp-route-id="@qualification.Id">Edit</a>
-                    <a class="btn btn-sm btn-info" asp-controller="Qualifications" asp-action="Details" asp-route-id="@qualification.Id">Details</a>
-                    <a class="btn btn-sm btn-danger" asp-controller="Qualifications" asp-action="Delete" asp-route-id="@qualification.Id">Delete</a>
+                    <a class="btn btn-sm btn-success" asp-area="Administration" asp-controller="Qualifications" asp-action="Edit" asp-route-id="@qualification.Id">Edit</a>
+                    <a class="btn btn-sm btn-info" asp-area="Administration" asp-controller="Qualifications" asp-action="Details" asp-route-id="@qualification.Id">Details</a>
+                    <a class="btn btn-sm btn-danger" asp-area="Administration" asp-controller="Qualifications" asp-action="Delete" asp-route-id="@qualification.Id">Delete</a>
                 </td>
             </tr>
         }
