--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/ServiceTypes/All.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/ServiceTypes/All.cshtml
@@ -3,7 +3,10 @@
     ViewData["Title"] = "All";
 }
 
-    <h1>Service Types</h1>
+<h1>Service Types</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-lg btn-success" asp-area="Administration" asp-controller="Services" asp-action="Create">Create new</a>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
@@ -20,9 +23,9 @@
                 <td>@serviceType.Name</td>
                 <td>@serviceType.IsShownInMainMenu</td>
                 <td style="width: 20%">
-                    <a class="btn btn-sm btn-success" asp-controller="ServiceTypes" asp-action="Edit" asp-route-id="@serviceType.Id">Edit</a>
-                    <a class="btn btn-sm btn-info" asp-controller="ServiceTypes" asp-action="Details" asp-route-id="@serviceType.Id">Details</a>
-                    <a class="btn btn-sm btn-danger" asp-controller="ServiceTypes" asp-action="Delete" asp-route-id="@serviceType.Id">Delete</a>
+                    <a class="btn btn-sm btn-success" asp-area="Administration" asp-controller="ServiceTypes" asp-action="Edit" asp-route-id="@serviceType.Id">Edit</a>
+                    <a class="btn btn-sm btn-info" asp-area="Administration" asp-controller="ServiceTypes" asp-action="Details" asp-route-id="@serviceType.Id">Details</a>
+                    <a class="btn btn-sm btn-danger" asp-area="Administration" asp-controller="ServiceTypes" asp-action="Delete" asp-route-id="@serviceType.Id">Delete</a>
                 </td>
             </tr>
         }
