--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/ServiceTypes/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/ServiceTypes/Edit.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Service Type Form</h1>
 </div>
 
-<form method="post" asp-controller="ServiceTypes" asp-action="Edit">
+<form method="post" asp-area="Administration" asp-controller="ServiceTypes" asp-action="Edit">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -29,7 +29,7 @@
                         <label class="custom-control-label" asp-for="IsShownInMainMenu" for="serviceTypeCheckboxId">Show in <b>Main Menu</b></label>
                     </p>
                     <button type="submit" class="btn btn-success">Save</button>
-                    <a class="btn btn-info" asp-controller="ServiceTypes" asp-action="All">Back to List</a>
+                    <a class="btn btn-info" asp-area="Administration" asp-controller="ServiceTypes" asp-action="All">Back to List</a>
                 </fieldset>
             </div>
         </div>
