--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/Edit.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/Services/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Edit Service</h1>
 
-<form method="post" asp-controller="Services" asp-action="Edit">
+<form method="post" asp-area="Administration" asp-controller="Services" asp-action="Edit">
     <fieldset class="border p-3">
         <legend class="w-auto">Edit Service</legend>
         <div class="container">
@@ -74,6 +74,6 @@
             </div>
         </div>
         <button type="submit" class="btn btn-success">Save</button>
-        <a class="btn btn-info" asp-controller="Services" asp-action="All">Back to List</a>
+        <a class="btn btn-info" asp-area="Administration" asp-controller="Services" asp-action="All">Back to List</a>
     </fieldset>
 </form>
