--- a/RxAuto/Web/RxAuto.Web/Views/Shared/_AdministrationLayout.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Shared/_AdministrationLayout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RxAuto</title>
     <!--link rel="stylesheet" href="~/lib/reset-css/reset.min.css" /> -->
-
     <!-- Used for bootstrap-select dropdown -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-select.min.css" />
@@ -16,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RxAuto</a>
+                <a class="navbar-brand" asp-area="Administration" asp-controller="Home" asp-action="Index">RxAuto</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,10 +24,7 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                     </ul>
                 </div>
@@ -37,14 +33,12 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <vc:admin-menu></vc:admin-menu>
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - RxAuto.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
     </footer>
 
     @*<script src="~/lib/jquery-slim/dist/jquery.slim.min.js"></script>
