Work on UI, Reservations and Users

--- a/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/OperatingLocations/Create.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Areas/Administration/Views/OperatingLocations/Create.cshtml
@@ -55,7 +55,7 @@
             </div>
             <row class="mx-auto mt-3">
                 <div class="col-12">
-                    <button type="submit" class="btn btn-success btn-lg">Промени</button>
+                    <button type="submit" class="btn btn-success btn-lg">Добави</button>
                 </div>
             </row>
         </div>
