--- a/RxAuto/Web/RxAuto.Web/Views/Shared/_Layout.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Shared/_Layout.cshtml
@@ -10,33 +10,20 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-select.min.css" />
 
+    <link rel="stylesheet" href="~/lib/jquery-datetimepicker/jquery.datetimepicker.min.css" />
+
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RxAuto</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <vc:menu></vc:menu>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
+            @if (this.User.IsInRole("Administrator"))
+            {
+                <vc:admin-menu></vc:admin-menu>
+            }
             @RenderBody()
         </main>
     </div>
@@ -48,13 +35,35 @@
     </footer>
 
     @*<script src="~/lib/jquery-slim/dist/jquery.slim.min.js"></script>
-    <script src="~/lib/popper/dist/umd/popper.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>*@
+        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>*@
 
     <!-- Used for bootstrap-select dropdown -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap-select.min.js"></script>
+
+    <script src="/jquery.js"></script>
+    <script src="~/lib/popper/dist/umd/popper.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+
+    <script>
+        $('#picker').datetimepicker({
+            timepicker: true,
+            datepicker: true,
+            format: 'd-m-Y H:i',
+            value: '2020-4-1 09:45',
+            hours12: false,
+            step: 30,
+            yearStart: 2020,
+            yearEnd: 2025,
+            allowTimes: [
+                '06:00', '06:30', '07:00', '07:30', '08:00', '08:30', '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30',
+                '18:00', '18:30'
+            ]
+        })
+    </script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
