--- a/RxAuto/Web/RxAuto.Web/wwwroot/css/site.css
+++ b/RxAuto/Web/RxAuto.Web/wwwroot/css/site.css
@@ -137,3 +137,8 @@ body {
             font-size: 18px;
         }
 }
+
+/*-- HOVER DROPDOWN MENU --*/
+.dropdown:hover > .dropdown-menu {
+    display: block;
+}
